--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
               A multi-purpose open-source Discord bot. Puck is a Discord bot
               based off Puck from Re: Zero. Puck has many useful capabilities as
               a Discord bot. Puck can tell the weather for anywhere in the
-              United States. Puck also has music capabilities. a
+              United States. Puck also has music capabilities. aa
             </p>
           </div>
         </div>
