--- a/static/styles.css
+++ b/static/styles.css
@@ -38,6 +38,10 @@ nav {
   top: 200px;
 }
 
+.py-5 {
+  padding-top:40rem !important;
+}
+
 @media only screen and (max-width: 600px) {
   #firstback {
     left: 0;
@@ -47,6 +51,10 @@ nav {
     height: 400px;
     width: 100% !important;
     float: left;
+  }
+
+  .py-5 {
+    padding-top: 20rem !important;
   }
 
   #textoverimage {
