--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
                      <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">Link</a>
+                     <a class="nav-link" href="#">About</a>
                   </li>
                </ul>
             </div>
@@ -110,7 +110,7 @@
          <div class="container">
          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
          <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow">
               <svg
                   class="bd-placeholder-img card-img-top"
                   width="100%"
@@ -151,12 +151,11 @@
             </div>
          </div>
          <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow">
                <svg
                   class="bd-placeholder-img card-img-top"
                   width="100%"
                   height="225"
-                  xmlns="http://www.w3.org/2000/svg"
                   role="img"
                   aria-label="Placeholder: Thumbnail"
                   preserveAspectRatio="xMidYMid slice"
@@ -189,7 +188,7 @@
             </div>
          </div>
          <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow">
                <svg
                   class="bd-placeholder-img card-img-top"
                   width="100%"
