--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Make the top part of the cards clickable -->
   <head>
     <title>Jaden's website</title>
     <meta charset="utf-8" />
@@ -108,6 +109,7 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow">
+                <a href="https://github.com/GoldenJayz/puck">
                 <svg
                   class="bd-placeholder-img card-img-top"
                   width="100%"
@@ -130,6 +132,7 @@
                     Puck
                   </text>
                 </svg>
+                </a>
                 <div class="card-body">
                   <p class="card-text">
                     A multi-purpose open-source Discord bot made using Python.
@@ -141,21 +144,13 @@
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
-                    <div class="btn-group">
-                      <a
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                        href="https://github.com/GoldenJayz/puck"
-                      >
-                        View
-                      </a>
-                    </div>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow">
+                <a href="https://github.com/GoldenJayz/jankpong">
                 <svg
                   class="bd-placeholder-img card-img-top"
                   width="100%"
@@ -171,6 +166,7 @@
                     Jank Pong
                   </text>
                 </svg>
+                </a>
                 <div class="card-body">
                   <p class="card-text">
                     The world's worst version of pong. Made using Unity and C#
@@ -178,21 +174,13 @@
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
-                    <div class="btn-group">
-                      <a
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                        href="https://github.com/GoldenJayz/jankpong"
-                      >
-                        View
-                      </a>
-                    </div>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow">
+                <a href="https://github.com/GoldenJayz/webimageclassifier">
                 <svg
                   class="bd-placeholder-img card-img-top"
                   width="100%"
@@ -209,6 +197,7 @@
                     WebImage Classifier
                   </text>
                 </svg>
+                </a>
                 <div class="card-body">
                   <p class="card-text">
                     A work in progress. Utilizes Python's AI capabilities to the
@@ -218,14 +207,6 @@
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
-                    <div class="btn-group">
-                      <a
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                        href="https://github.com/GoldenJayz/webimageclassifier"
-                      >
-                        View
-                      </a>
                     </div>
                     <small class="text-muted">Work in Progress</small>
                   </div>
