--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
     </nav>
     <article>
       <div class="container-fluid" id="textoverimage">
-        <h1 class="text-center" style="color: white" id="maintxt">Jaden</h1>
+        <h1 class="text-center" style="color:white;" id="maintxt">Jaden</h1>
       </div>
     </article>
     <main>
