--- a/templates/index.html
+++ b/templates/index.html
@@ -217,7 +217,7 @@
         </div>
       </div>
       <div class="album py-5 bg-dark">
-        <h1 style="color:#fff">amoogus</h1>
+        <h1 class="text-center" style="color:#fff">About me</h1>j
       </div>
     </main>
     <script
