--- a/templates/index.html
+++ b/templates/index.html
@@ -217,7 +217,41 @@
         </div>
       </div>
       <div class="album py-5 bg-dark">
-        <h1 class="text-center" style="color:#fff">About me</h1>j
+        <h1 class="text-center" style="color:#fff">About me</h1>
+        <div class="container-fluid mt-5 ml-5">
+          <div class="jumbotron text-white">
+            <p class="text-center" style="font-size:1.2rem;">
+              My name is Jaden and I live in Massachusetts.
+              I am currently 15 years old and I started programming
+              when I was 12. My first programming language was Python.
+              The only reason why I ended up using Python was cause I
+              had it installed on my computer before. I originally did
+              not even code for the most part. I used an application made
+              by someone else to create discord bots. One day my friend 
+              wanted to do an hour of coding and I did not even know how 
+              to really code that much. So I ended up taking on the challenge
+              of doing an hour of code. I started looking at the code made by
+              the application in order to grasp a better understanding of what
+              it was doing. I started wanting to do more and more so I started
+              looking up Discord bot tutorials on YouTube. I did not end up 
+              learning Python through lessons and such. It just naturally came
+              to me. I started doing little Discord bots that my online friends
+              and real life friends would use. Then quarantine came in 2020 and
+              I wanted to do more than just Discord bots. I made some simple 
+              programs and software. I then decided that I want to expand my 
+              skills and apply to a Technical Highschool. I got accepted and 
+              while I was exploring the different choices for shops I came across
+              Computer Programming and Web Development. It piqued my interest. I 
+              decided to try out the shop for a week and I ended up learning 
+              basic HTML on the first day. This inspired me heavily and I spent the
+              day when I got home learning more and more about HTML and CSS. At the 
+              same time my friend and I decided to create a Discord bot together 
+              and that Discord bot was Puck. I did majority of the bot programming
+              and he did majority of the website side of things. At the same time 
+              I started picking up other languages like JavaScript and C++.
+            </p>
+          </div>
+        </div>
       </div>
     </main>
     <script
